# flask-naver-search

./: .env  .gitignore  README.md  app.py  pyproject.toml  search.py
api/: app.py  search.py
api/templates/: about.html  base.html  home.html  results.html
static/: style.css
